[package]
name = "shazam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = "0.23.0"
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["spa"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0.10", features = ["derive"] }
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
