[package]
name = "shazam"
version = "0.1.12"
edition = "2021"
authors = ["Bradley Searle"]
license = "MIT"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["spa"] }
clap = { version = "4.0.10", features = ["derive"] }
chrono = "0.4.22"
regex = "1.7.0"
serde = { version = "1.0.145", features = ["derive"] }
tera = { version = "1.17.1", features = ["builtins"] }
titlecase = "2.2.1"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5.9"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
